Fixed invisible links in menu

--- a/public/stylesheets/iqvoc/iqvoc.css
+++ b/public/stylesheets/iqvoc/iqvoc.css
@@ -84,6 +84,7 @@ div.pagination span.current { background-color: #FEFBDC; border-color: #F3AC40; 
 
 #controls ul a {
   display: inline;
+  color: #318210;
 }
 
 #controls h3 {
